assets/css/style.css
/* ... */
/**
 * responsive for large than 1200px screen
 */

@media (min-width: 1200px) {

  /**
   * REUSED STYLE
   */

  .container,
  .header { max-width: 1140px; }



  /**
   * ABOUT
   */

  .about .grid-list { gap: 50px; }



  /**
   * CONTACT
   */

  .contact-card { gap: 150px; }

}





/**
 * responsive for large than 1400px screen
 */

@media (min-width: 1400px) {

  /**
   * REUSED STYLE
   */

  .container,
  .header { max-width: 1320px; }



  /**
   * HERO
   */

  .hero .container { grid-template-columns: 1fr 0.8fr; }

  .hero .section-text { --fs-5: 2.4rem; }



  /**
   * ABOUT
   */

  .about .wrapper { gap: 100px; }

  .about .grid-list { gap: 60px; }

}

